# netsblox-vm-esp32

./: .gitignore  Cargo.toml  README.md  build.rs  extract-ota.py  partitions.csv  peripherals.md  platform.toml  sdkconfig.defaults  test-err.xml.keep  test.xml  user-guide.md
.cargo/: config.toml
.github/workflows/: publish.yml
src/: http.rs  lib.rs  main.rs  platform.rs  storage.rs  system.rs  wifi.rs
src/www/: index.html
templates/: platform.rs
