[package]
name = "netsblox-vm-esp32"
version = "0.1.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/netsblox-vm-esp32"
documentation = "https://docs.rs/netsblox-vm-esp32"
description = "An implementation of netsblox-vm for esp32 embedded boards."

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
codegen-units = 1
lto = true

# remove this when rustlang team fixes this issue - https://github.com/rust-lang/compiler-builtins/issues/347
[profile.dev.package.compiler_builtins]
overflow-checks = false

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]

# core deps
netsblox-vm = { git = "https://github.com/dragazo/netsblox-vm", default-features = false, features = ["serde"] }
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "cdcb387", default-features = false }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", features = ["experimental"] }
esp-idf-svc = { git = "https://github.com/dragazo/esp-idf-svc", features = ["experimental"] }
embedded-svc = { version = "0.24.0", feature = ["experimental"] }
esp-idf-hal = { git = "https://github.com/dragazo/esp-idf-hal" }
# esp-idf-hal = "0.40.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1" }
getrandom = { version = "0.2.9" }
uuid = { version = "1.3.2", default-features = false, features = ["v4", "fast-rng"] }
string-ring = { version = "0.1.1", default-features = false }

# peripheral deps
embedded-hal = "0.2.7"
max30205 = "0.1.1"
lis3dh = { git = "https://github.com/dragazo/lis3dh-rs" }
is31fl3741 = { git = "https://github.com/dragazo/is31fl3741" }
bmp388 = { git = "https://github.com/dragazo/bmp388" }
veml6030 = { git = "https://github.com/dragazo/veml6030-rs" }

[build-dependencies]
embuild = "0.31"
names = "0.14.0"
