[package]
name = "netsblox-vm-esp32"
version = "0.1.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/netsblox-vm-esp32"
documentation = "https://docs.rs/netsblox-vm-esp32"
description = "An implementation of netsblox-vm for esp32 embedded boards."

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
codegen-units = 1
lto = true

# remove this when rustlang team fixes this issue - https://github.com/rust-lang/compiler-builtins/issues/347
[profile.dev.package.compiler_builtins]
overflow-checks = false

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]

# core deps
netsblox-vm = { version = "=0.3.1", default-features = false, features = ["serde", "std"] }
gc-arena = { version = "=0.4.0", default-features = false }
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-svc = { version = "0.47.3", features = ["experimental"] }
embedded-svc = { version = "0.26.4", feature = ["experimental"] }
esp-idf-hal = { version = "0.42.5" }
serde = { version = "1.0", features = ["derive"], default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1" }
getrandom = { version = "0.2.11" }
uuid = { version = "1.6.1", default-features = false, features = ["v4", "fast-rng"] }
string-ring = { version = "0.1.1", default-features = false }

# peripheral deps
embedded-hal = "0.2.7"
max30205 = { version = "0.1.1", default-features = false }
lis3dh = { git = "https://github.com/dragazo/lis3dh-rs", default-features = false }
is31fl3741 = { git = "https://github.com/dragazo/is31fl3741", default-features = false, features = ["adafruit_rgb_13x9"] }
bmp388 = { git = "https://github.com/dragazo/bmp388", default-features = false }
veml6030 = { git = "https://github.com/dragazo/veml6030-rs", default-features = false }

[build-dependencies]
embuild = "0.31"
names = "0.14.0"
